# nexus-agentos

./: .coverage  .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GAP_ANALYSIS_2026Q3.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  prometheus.yml  pyproject.toml  pytest.ini  testpypi_push.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agentos/: __init__.py  cache.py  config_validator.py  cost.py  deployment.py  enterprise.py  errors.py  experiments.py  feedback.py  health.py  llm.py  log.py  monitoring.py  plugin_manager.py  plugins.py  prompts.py  queue.py  rag.py  storage.py  subagent.py  swarm.py
agentos/agent/: __init__.py  agent_builder.py  model_router.py  pipeline.py  production.py  production_agent.py  tool_agent.py
agentos/agents/: market.py
agentos/api/: __init__.py  middleware.py  rate_limiter.py  server.py  server_old_backup.py  sse.py  streaming.py  versioning.py  websocket.py
agentos/background/: __init__.py  supervisor.py  task_manager.py
agentos/benchmarks/: __init__.py  runner.py
agentos/cache/: __init__.py  embedder.py  llm_cache.py  response_cache.py
agentos/channels/: __init__.py  base.py  gateway.py  message.py  router.py
agentos/checkpoint/: __init__.py  base.py  engine.py  factory.py  postgres.py  sqlite.py
agentos/cli/: __init__.py  config_panel.py  errors.py  init.py  main.py  rollback.py  serve.py
agentos/comm/: __init__.py  layer.py
agentos/concurrency/: __init__.py  batch.py
agentos/concurrent/: __init__.py  parallel.py
agentos/config/: __init__.py  loader.py  presets.py  validator.py
agentos/conversation/: conversation.py
agentos/core/: __init__.py  async_loop.py  auth.py  background.py  cache.py  circuit_breaker.py  code_agent.py  config.py  context.py  cost_tracker.py  di.py  distributed_lock.py  event_bus.py  feature_flags.py  handoff.py  health.py  lifecycle.py  loop.py  middleware.py  observability.py  prompt_manager.py  rate_limiter.py  resource_manager.py  response_cache.py  retry.py  secrets.py  session.py  state_machine.py  streaming.py  streaming_optimizer.py  task_router.py
agentos/cost/: __init__.py  token_counter.py  tracker.py
agentos/dashboard/: __init__.py  server.py  tracker.py
agentos/deployment/: __init__.py  docker.py
agentos/desktop/: __init__.py  server.py  shell.py  skill_store_server.py  tui.py
agentos/docs/: __init__.py  generator.py
agentos/enterprise/: __init__.py  api_keys.py  audit.py  auth.py  tenants.py
agentos/errors/: __init__.py  handler.py
agentos/eval/: __init__.py  benchmark.py
agentos/evaluation/: __init__.py  benchmark.py  regression.py  scorers.py  suite.py
agentos/evolution/: __init__.py  autopilot.py  engine.py  learner.py  signals.py
agentos/experiments/: __init__.py  runner.py
agentos/feedback/: __init__.py  learner.py
agentos/guardrails/: __init__.py  engine.py  policy.py  rules.py
agentos/health/: __init__.py
agentos/hitl/: __init__.py  approver.py  gradio_ui.py  presets.py
agentos/llm/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  factory.py  ollama_provider.py  openai_provider.py  pangu_provider.py  smart_cache.py
agentos/log/: __init__.py  formatter.py
agentos/marketplace/: __init__.py  bridge.py  ecosystem_bridge.py  importer.py  manifest.py  registry.py
agentos/mcp/: __init__.py  adapter.py  builtin_servers.py  sampling.py  server.py
agentos/memory/: __init__.py  compressor.py  consolidation.py  conversation.py  long_term.py  pager.py  persistence.py  pyramid.py  retriever.py  session.py  short_term.py  summarizer.py  working.py
agentos/models/: __init__.py  __init___20260705_134105_910.py  agent.py  error.py  resilience.py  response.py  router.py  routing_strategy.py
agentos/monitoring/: __init__.py  alerts.py
agentos/multimodal/: __init__.py  manager.py  provider.py
agentos/observability/: __init__.py  cost_analytics.py  logging.py  metrics.py  otel_bridge.py  tracer.py  tracing.py
agentos/orchestration/: __init__.py  a2a_router.py  distributed.py  graph.py  graph_executor.py  parallel.py  swarm_coordinator.py  task_decomposer.py
agentos/plugins/: __init__.py  discovery.py  lifecycle.py  loader.py  registry.py
agentos/prompt/: __init__.py  hub.py
agentos/prompts/: __init__.py  few_shot.py  manager.py  optimizer.py
agentos/protocols/: __init__.py  a2a.py  a2a_store.py  a2a_streaming.py  agent_card.py  compliance.py  contracts.py  grpc.py  mcp.py  output.py  registry.py
config/: prometheus.yml
deploy/: Dockerfile  docker-compose.yml  k8s.yaml
docs/: api_reference.md  benchmark-v1.14.3.md  cookbook.md  quickstart.md  tutorial.md
examples/: __init__.py  file_ops_agent.py  multi_agent_research.py  production_agent.py
k8s/: deployment.yml
temp/: test_sessions.db
tests/: __init__.py  conftest.py  run_v1147_tests.py  test_agent_builder.py  test_agent_builder_unit.py  test_agent_pipeline.py  test_agentos_core_auth.py  test_agentos_core_background.py  test_agentos_core_cache.py  test_agentos_core_config.py  test_agentos_core_context.py  test_agentos_core_cost_tracker.py  test_agentos_core_di.py  test_agentos_core_feature_flags.py  test_agentos_core_handoff.py  test_agentos_core_health.py  test_agentos_core_init.py  test_agentos_core_lifecycle.py  test_agentos_core_middleware.py  test_agentos_core_observability.py  test_agentos_core_resource_manager.py  test_agentos_core_retry.py  test_agentos_core_secrets.py  test_agentos_core_session.py  test_agentos_core_streaming.py  test_agentos_core_task_router.py  test_agentos_tools_bridge.py  test_agentos_tools_di_container.py  test_agentos_tools_init.py  test_agentos_tools_metrics.py  test_agentos_tools_request_deduplicator.py  test_agentos_tools_retry_queue.py  test_agentos_tools_scheduler.py  test_agentos_tools_serial_cache.py  test_agentos_tools_skill_tool.py  test_agentos_tools_startup_accelerator.py  test_agentos_tools_validation.py  test_api_middleware.py  test_api_server_coverage.py  test_async_executor.py  (+103 more)
(+307 files in other folders)
