[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-agentos"
version = "1.14.0"
description = "AgentOS — Production-ready multi-agent framework with Tool-Using Agent, LLM abstraction, streaming/retry/checkpoint, swarm coordination, async parallel primitives, virtual memory pager, Docker/K8s deployment, multimodal, Prompt Hub, cost tracker, and enterprise features (RBAC, multi-tenancy, audit)."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AgentOS Team"},
]
keywords = ["agent", "llm", "ai", "framework", "multi-agent", "function-calling"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0",
    "aiosqlite>=0.20.0",
    "pywebview>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
evaluation = [
    "rouge-score>=0.1.2",
    "sentence-transformers>=2.0",
]
rag = [
    "faiss-cpu>=1.7",
    "chromadb>=0.4",
    "tiktoken>=0.5",
    "sentence-transformers>=2.0",
    "pypdf>=4.0",
    "python-docx>=1.0",
]
[project.urls]
Homepage = "https://github.com/agentos/agentos"
Documentation = "https://docs.agentos.dev"
Repository = "https://github.com/agentos/agentos.git"

[project.scripts]
agentos = "agentos.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["agentos", "examples"]
